feature: most_retweeted

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# df = pd.read_json(\"farmers-protest-tweets-2021-03-5.json\", lines=True)\n"
+    "df = pd.read_json(\"farmers-protest-tweets-2021-03-5.json\", lines=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Los tweets más retweeted. Default primeros 10\n",
     "def most_retweeted(n=10):\n",
-    "    pass\n",
+    "    return df[\"retweetCount\"].nlargest(n)\n",
     "\n",
     "\n",
     "# Los usuarios que más tweets que emitieron. Default primeros 10\n",
@@ -39,12 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
-    "    pass\n",
+    "    most_retweeted()\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
